# reverese_proxy_api_debugger

./: .env.example  .gitignore  CMakeLists.txt  demo.sh  logs.proxy
api/: Dockerfile  insights.ts  requirements.txt  server.py
infra/: docker-compose.yml
infra/init-sql/: 01-schema.sql
magritte-bootvisor-42578b702f/deployment/: configuration.yml  data-sources.json  manifest.yml  monitor-manifest.json
poco-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt
poco-build/ActiveRecord/: Makefile  cmake_install.cmake
poco-build/Crypto/: Makefile  cmake_install.cmake
poco-build/Data/: Makefile  cmake_install.cmake
poco-build/Encodings/: Makefile  cmake_install.cmake
poco-build/Foundation/: Makefile  cmake_install.cmake
poco-build/JSON/: Makefile  cmake_install.cmake
poco-build/JWT/: Makefile  cmake_install.cmake
poco-build/MongoDB/: Makefile  cmake_install.cmake
poco-build/Net/: Makefile  cmake_install.cmake
poco-build/NetSSL_OpenSSL/: Makefile  cmake_install.cmake
poco-build/PageCompiler/: Makefile  cmake_install.cmake
poco-build/Poco/: PocoActiveRecordTargets.cmake  PocoCryptoTargets.cmake  PocoDataODBCTargets.cmake  PocoDataPostgreSQLTargets.cmake  PocoDataSQLiteTargets.cmake  PocoDataTargets.cmake  PocoEncodingsTargets.cmake  PocoFoundationConfig.cmake  (+12 more)
proxy/: CMakeLists.txt  Dockerfile  default.conf
proxy/src/: main.cpp
ui/: .env  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
worker/: Dockerfile  poller.py
(+86 files in other folders)
